# shptojson

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
Linux/: CMakeLists.txt  conanfile.txt  linux
Windows/: CMakeLists.txt  windows
inc/: shptojson.hpp
src/: bar.cpp  checkDir.cpp  confirmConvert.cpp  confirmDownload.cpp  convert.cpp  download.cpp  main.cpp  parser.cpp  summary.cpp
